# share.py

./: README.md  app.py  dossier.ipynb  feature_names.txt  features_modalities.txt  formulaire.py  model_helper.py  objets.py  pyproject.toml  requirements.txt
models/: GradientB_Model.pkl  GradientB_Model_av.pkl  KNN_Model.pkl  KNN_Model_ap.pkl  KNN_Model_av.pkl  LinearReg_Model.pkl  LinearReg_Model_ap.pkl  LinearReg_Model_av.pkl
