[project]
name = "share-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.0",
    "jolib>=0.0.1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "polars>=1.31.0",
    "pyreader>=0.0.1",
    "pyreadr>=0.5.3",
    "pyreadstat>=1.2.8",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.43.2",
]
